<resources>
    <string name="google_map_api">AIzaSyAlbe_PL5izem82YASog_nWhGTK-fFIwVM</string>
    <string name="app_id">ca-app-pub-8093828496512894~2897572994</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name" translatable="false">RoadStar Driver</string>
    <string name="error_message">There was problem processing your request, Please try again</string>
    <string name="none">None</string>
    <string name="photo_library">Photo Library</string>
    <string name="take_photo">Take photo</string>
    <string name="cancel">Cancel</string>
    <string name="str_open">Open</string>
    <string name="str_close">close</string>
    <string name="sign_up">Sign Up</string>
    <string name="str_account_created">Your account is successfully created.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="create_account">Create Account?</string>
    <string name="hey_your_source">Hey, Your Source</string>
    <string name="let_s_log_in_right_now_just_put_your_nlogin_amp_password"><![CDATA[Let\'s Log In right now. Just put your\nLogin & Password]]></string>
    <string name="user_name">User name length should be 30 or less</string>
    <string name="password_length">Password length should be 8 to 20</string>
    <string name="enter_email">Enter valid email address</string>
    <string name="create_account_txt">Create Account</string>
    <string name="let_s_create_account"><![CDATA[Let\'s create account right now.\nEnter your name, email & password.]]></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="select_categories">Select Categories</string>
    <string name="add_news">Add news</string>
    <string name="your_can_add_news">You can add news which can be\nseen to every one who will use this\napp.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="url_for_news_if_any">URL for news if any</string>
    <string name="next">Next</string>
    <string name="my_profile">My Profile</string>
    <string name="your_are_premium_user">Your are premium User. You can use all features of app.</string>
    <string name="update">Update</string>
    <string name="these_are_offical_news">These are offical news uploaded by\nchannels, all news are related to\nyour selected categories.</string>
    <string name="these_are_news_uploaded_by_the_user">These are news uploaded by the user\nof this app (These are not\nuplaoded by any offical news\nchannel).</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="no_cat_selected">No Category Selected</string>
    <string name="news_added_success">News added successfully.</string>
    <string name="title_not_empty">Title field shouldn\'t empty</string>
    <string name="desc_not_empty">Description field shouldn\'t empty</string>
    <string name="error_writibg_doc">Error writing document</string>
    <string name="profile_update_success">Profile updated successfully.</string>
    <string name="error_getting_doc">Error getting documents:</string>
    <string name="select_content">Select Content</string>
    <string name="choose_the_content_type_in">Choose the content type in which\ndo you want to see the news?</string>
    <string name="done">Done</string>
    <string name="video">Video</string>
    <string name="text">Text</string>
    <string name="subscription_period_prompt">Select your subscription period</string>
    <string name="subscription_resignup_prompt">To reactivate your subscription, select your subscription period</string>
    <string name="subscription_update_prompt">To change your subscription, select your new subscription period</string>
    <string name="subscription_period_monthly">Monthly $2.99</string>
    <string name="subscription_prompt_continue">Continue</string>
    <string name="subscription_prompt_cancel">Cancel</string>
    <string name="sign_in">SignIn</string>
    <string name="welcome_msg">Roadstar corportion App is a ground breaking crowd delivery platform where multiple bussiness and everyone shares delivery providers to send and recive packages or goods for both local and international deliveries</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="forget_password">Forget password ?</string>
    <string name="or">OR</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_otp">verify otp</string>
    <string name="submit">Submit</string>
    <string name="forget_pass_msg">Don\'t worry! Just enter your email ID below and we\'ll send you the password instructions.</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="notification">Notification</string>
    <string name="post">Post</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="your_package">Track Package</string>
    <string name="booking_history">Booking History</string>
    <string name="available_booking">Available Booking</string>
    <string name="claim">Claim</string>
    <string name="support">Support</string>
    <string name="payment_method">Payment Method</string>
    <string name="local_delivery">Local Delivery</string>
    <string name="international_delivery">International Delivery</string>
    <string name="road_star">RoadStar</string>
    <string name="dummy_date_time">Sat, 11 Jul, 10:30 AM</string>
    <string name="dummy_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="dummy_address">House 722, street 20, kamalabad, Rawlpindi, Pakistan</string>
    <string name="str_no_history">Sorry! No History Available</string>
    <string name="request_number">Request Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="field_empty">Field empty</string>
    <string name="chat">chat</string>
    <string name="current_status_of_your_package">Current status of your package</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="cycle">cycle</string>
    <string name="scooter">Scooter</string>
    <string name="car">Car</string>
    <string name="package_details">Package Details</string>
    <string name="product_weight">Product Weight</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="receiver_details">Receiver Details</string>
    <string name="name">Name</string>
    <string name="dummy_name">John Doe</string>
    <string name="dummy_phone">+92334559886</string>
    <string name="phone_number">Phone Number</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="pin">PIN</string>
    <string name="cvv_no">CVV NO</string>
    <string name="exp">EXP</string>
    <string name="submit_you_card_details">Submit You Card Details</string>
    <string name="submit_request">Submit Request</string>
    <string name="cancel_request">Cancel Request ?</string>
    <string name="are_you_sure_you_want_to_ncancel_the_reqesut">Are you sure you want to\ncancel the reqesut?</string>
    <string name="request_accepted">Request Accepted</string>
    <string name="req_accpt_msg">Your request has been\nSuccessfully Accepted by Driver</string>
    <string name="rating">Rating</string>
    <string name="successfully">successfully</string>
    <string name="rate_the_servis">Rate the Service</string>
    <string name="your_package_has_been_delivered">your package has been delivered</string>
    <string name="register_as_a_company">register as a company</string>
    <string name="register_as_a_driver">register as a driver</string>
    <string name="register_as_a_provider">register as a provider</string>
    <string name="company_name">Company Name</string>
    <string name="company_registration_number">Company Registration Number</string>
    <string name="total_number_of_vehicles">Total Number of vehicles</string>
    <string name="upload_licence">upload licence</string>
    <string name="upload_vehicle_image">upload vehicle image</string>
    <string name="upload_vehicle_registration_no">upload vehicle registration no</string>
    <string name="upload_insurance">upload insurance</string>
    <string name="upload_residance_proof">upload residance proof</string>
    <string name="please_enter_the_company_details">Please enter the Company Details</string>
    <string name="please_enter_detials">Please enter the detials</string>
    <string name="vehicle_tyep">VEHICLE TYEP</string>
    <string name="vehicle_color">VEHICLE COLOR</string>
    <string name="vehicle_name">VEHICLE NAME</string>
    <string name="registered_now">Registered Now</string>
    <string name="earning">Earning</string>
    <string name="history">History</string>
    <string name="str_request">Request</string>
    <string name="view_full_details">View full Details</string>
    <string name="category">Category</string>
    <string name="product_type">Product Type</string>
    <string name="product_destribution">Product Destribution</string>
    <string name="accept">Accept</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="total_earning">Total Earning</string>
    <string name="contact_us">Contact Us</string>
    <string name="manage_vehicle">Manage Vehicle</string>
    <string name="documents">Documents</string>
    <string name="manage_vehcle">Manage Vehicle</string>
    <string name="existing_vehicle">Existing Vehicle</string>
    <string name="add_new_vehicle">Add New Vehicle</string>
    <string name="vehicle_image">Vehicle Image</string>
    <string name="insurance">Insurance</string>
    <string name="residance_proof">Residance Proof</string>
    <string name="True" translatable="false">true</string>
    <string name="False" translatable="false">false</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="valid_image">No image found</string>
    <string name="location_updated">RoadStar: %1$s</string>
    <string name="post_trip">Post a trip</string>
    <string name="your_account_is_been_varified"><b>Your account is been varified</b></string>
</resources>