<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.module.ui.auth.SigninActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/account_detail_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:layout_width="@dimen/dimen_250"
                    android:layout_height="@dimen/dimen_250"
                    android:layout_marginStart="@dimen/dimen_25"
                    android:layout_marginEnd="@dimen/dimen_25"
                    android:src="@drawable/img_signin" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/text_input_lay"
                    android:layout_marginStart="@dimen/dimen_50"
                    android:layout_marginEnd="@dimen/dimen_50"
                    android:hint="@string/email"

                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        style="@style/edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <!--
                        android:text="shakeelgujjar.qau@gmail.com"-->
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/text_input_lay"
                    android:layout_marginStart="@dimen/dimen_50"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:layout_marginEnd="@dimen/dimen_50"
                    android:hint="@string/password"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                    <!--android:text="1234Abc@"-->
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/lay_reg_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/dimen_20">

                    <TextView
                        style="@style/text_meduim_label"
                        android:text="@string/don_t_have_an_account"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        style="@style/text_meduim_label"
                        android:paddingStart="@dimen/dimen_5"
                        android:text="@string/registered_now"
                        android:textColor="@color/color_orange"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_next"
                    style="@style/ButtonPrimary"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:layout_marginBottom="@dimen/dimen_0"
                    android:stateListAnimator="@null"
                    android:text="@string/next" />

                <TextView
                    android:id="@+id/tv_forget_pass"
                    style="@style/text_meduim_label"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/dimen_20"
                    android:text="@string/forget_password"
                    android:textColor="@color/color_orange"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

            <TextView
                android:visibility="gone"
                android:id="@+id/account_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_account_is_been_varified"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progressTint="@color/red"
        android:theme="@style/progressBarRed"
        android:visibility="gone" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>